[package]
name = "yafnv"
version = "3.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Yet Another Fowler-Noll-Vo (FNV-1, FNV-1a) hash implementation for `u32/u64/u128` size, all `no_std` and`no_alloc`"
documentation = "https://docs.rs/yafnv/latest/yafnv/"
homepage = "https://github.com/quartiq/yafnv"
repository = "https://github.com/quartiq/yafnv"

[dependencies]
num-traits = { version = "0.2.18", default-features = false }

[features]
std = []
